[desktop] Restore rich native icons on macOS